@@ -5,10 +5,13 @@ import io.dataease.api.template.dto.TemplateManageFileDTO;
 import io.dataease.api.template.dto.TemplateMarketDTO;
 import io.dataease.api.template.dto.TemplateMarketPreviewInfoDTO;
 import io.dataease.api.template.response.*;
+import io.dataease.api.template.vo.MarketApplicationMetaDataVO;
 import io.dataease.api.template.vo.MarketApplicationSpecVO;
+import io.dataease.api.template.vo.MarketLatestReleaseVO;
 import io.dataease.api.template.vo.MarketMetaDataVO;
 import io.dataease.constant.CommonConstants;
 import io.dataease.exception.DEException;
+import io.dataease.i18n.Translator;
 import io.dataease.operation.manage.CoreOptRecentManage;
 import io.dataease.system.manage.SysParameterManage;
 import io.dataease.template.dao.auto.entity.VisualizationTemplateCategoryMap;
@@ -23,6 +26,8 @@ import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
 
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -34,6 +39,7 @@ import java.util.stream.Collectors;
 public class TemplateCenterManage {
     private final static String POSTS_API_V2 = "/apis/api.store.halo.run/v1alpha1/applications?keyword=&priceMode=&sort=latestReleaseTimestamp%2Cdesc&type=THEME&deVersion=V2&templateType=&label=&page=1&size=2000";
     private final static String TEMPLATE_META_DATA_URL = "/upload/meta_data.json";
+    private final static String TEMPLATE_BASE_INFO_URL = "/apis/api.store.halo.run/v1alpha1/applications/";
     @Resource
     private SysParameterManage sysParameterManage;
 
@@ -52,8 +58,35 @@ public class TemplateCenterManage {
      */
     public TemplateManageFileDTO getTemplateFromMarket(String templateUrl) {
         if (StringUtils.isNotEmpty(templateUrl)) {
+            String templateName = templateUrl.substring(templateUrl.lastIndexOf("/") + 1, templateUrl.length());
+            templateUrl = templateUrl.replace(templateName, URLEncoder.encode(templateName, StandardCharsets.UTF_8).replace("+", "%20"));
             String sufUrl = sysParameterManage.groupVal("template.").get("template.url");
             String templateInfo = HttpClientUtil.get(sufUrl + templateUrl, null);
+            return JsonUtil.parseObject(templateInfo, TemplateManageFileDTO.class);
+        } else {
+            return null;
+        }
+    }
+
+    /**
+     * @param templateUrl template url
+     * @Description Get template file from template market
+     */
+    public TemplateManageFileDTO getTemplateFromMarketV2(String templateName) {
+        if (StringUtils.isNotEmpty(templateName)) {
+            String sufUrl = sysParameterManage.groupVal("template.").get("template.url");
+            String templateBaseInfo = HttpClientUtil.get(sufUrl + TEMPLATE_BASE_INFO_URL + templateName, null);
+            MarketTemplateV2ItemResult baseItemInfo = JsonUtil.parseObject(templateBaseInfo, MarketTemplateV2ItemResult.class);
+            String templateUrl = "";
+            if (baseItemInfo.getLatestRelease() != null) {
+                templateUrl = sufUrl + "/store/apps/" + templateName +
+                        "/releases/download/" + baseItemInfo.getLatestRelease().getRelease().getMetadata().getName()
+                        + "/assets/" + baseItemInfo.getLatestRelease().getAssets().getFirst().getMetadata().getName();
+            } else {
+                templateUrl = sufUrl + baseItemInfo.getApplication().getSpec().getLinks().get(0).getUrl();
+            }
+
+            String templateInfo = HttpClientUtil.get(templateUrl, null);
             return JsonUtil.parseObject(templateInfo, TemplateManageFileDTO.class);
         } else {
             return null;
@@ -67,6 +100,9 @@ public class TemplateCenterManage {
     public String marketGet(String url, String accessKey) {
         HttpClientConfig config = new HttpClientConfig();
         config.addHeader("API-Authorization", accessKey);
+        config.setConnectTimeout(5000);
+        config.setSocketTimeout(10000);
+        config.setConnectionRequestTimeout(5000);
         return HttpClientUtil.get(url, config);
     }
 
@@ -110,8 +146,8 @@ public class TemplateCenterManage {
         manageResult.stream().forEach(templateManageDTO -> {
             templateManageDTO.setCategoryName(categoryMap.get(templateManageDTO.getPid()));
             List<String> categories = templateManageDTO.getCategories();
-            if(!CollectionUtils.isEmpty(categories)){
-                List<String> categoryNames = categories.stream().map(categoryId ->categoryMap.get(categoryId)).collect(Collectors.toList());
+            if (!CollectionUtils.isEmpty(categories)) {
+                List<String> categoryNames = categories.stream().map(categoryId -> categoryMap.get(categoryId)).collect(Collectors.toList());
                 templateManageDTO.setCategoryNames(categoryNames);
                 result.add(new TemplateMarketDTO(templateManageDTO));
             }
@@ -137,11 +173,11 @@ public class TemplateCenterManage {
     public MarketPreviewBaseResponse searchTemplatePreview() {
         try {
             MarketBaseResponse baseContentRsp = searchTemplate();
-            List<MarketMetaDataVO> categories = baseContentRsp.getCategories().stream().filter(category -> !"最近使用".equals(category.getLabel())).collect(Collectors.toList());
+            List<MarketMetaDataVO> categories = baseContentRsp.getCategories().stream().filter(category -> !Translator.get("i18n_template_recent").equals(category.getLabel())).toList();
             List<TemplateMarketDTO> contents = baseContentRsp.getContents();
             List<TemplateMarketPreviewInfoDTO> previewContents = new ArrayList<>();
             categories.forEach(category -> {
-                if ("推荐".equals(category.getLabel())) {
+                if (Translator.get("i18n_template_recommend").equals(category.getLabel())) {
                     previewContents.add(new TemplateMarketPreviewInfoDTO(category, contents.stream().filter(template -> "Y".equals(template.getSuggest())).collect(Collectors.toList())));
                 } else {
                     previewContents.add(new TemplateMarketPreviewInfoDTO(category, contents.stream().filter(template -> checkCategoryMatch(template, category.getLabel())).collect(Collectors.toList())));
@@ -165,7 +201,7 @@ public class TemplateCenterManage {
         }
     }
 
-    private MarketBaseResponse baseResponseV2TransRecommend(MarketTemplateV2BaseResponse v2BaseResponse,List<TemplateMarketDTO> templateManages, String url) {
+    private MarketBaseResponse baseResponseV2TransRecommend(MarketTemplateV2BaseResponse v2BaseResponse, List<TemplateMarketDTO> templateManages, String url) {
         Map<String, Long> useTime = coreOptRecentManage.findTemplateRecentUseTime();
         List<MarketMetaDataVO> categoryVO = getCategoriesV2().stream().filter(node -> !"全部".equalsIgnoreCase(node.getLabel())).collect(Collectors.toList());
         Map<String, String> categoriesMap = categoryVO.stream()
@@ -174,8 +210,9 @@ public class TemplateCenterManage {
         if (v2BaseResponse != null) {
             v2BaseResponse.getItems().stream().forEach(marketTemplateV2ItemResult -> {
                 MarketApplicationSpecVO spec = marketTemplateV2ItemResult.getApplication().getSpec();
+                MarketApplicationMetaDataVO metadata = marketTemplateV2ItemResult.getApplication().getMetadata();
                 if ("Y".equalsIgnoreCase(spec.getSuggest())) {
-                    contents.add(new TemplateMarketDTO(spec.getReadmeName(), spec.getDisplayName(), spec.getScreenshots().get(0).getUrl(), spec.getLinks().get(0).getUrl(), categoriesMap.get(spec.getLabel()), spec.getTemplateType(), useTime.get(spec.getReadmeName()), "Y"));
+                    contents.add(new TemplateMarketDTO(metadata.getName(), spec.getDisplayName(), spec.getScreenshots().get(0).getUrl(), spec.getLinks().get(0).getUrl(), categoriesMap.get(spec.getLabel()), spec.getTemplateType(), useTime.get(spec.getReadmeName()), "Y", spec.getTemplateClassification()));
                 }
             });
         }
@@ -185,16 +222,16 @@ public class TemplateCenterManage {
         Long countDashboard = contents.stream().filter(item -> "SCREEN".equals(item.getTemplateType())).count();
         List<TemplateMarketDTO> templateDataV = templateManages.stream().filter(item -> "PANEL".equals(item.getTemplateType())).collect(Collectors.toList());
         List<TemplateMarketDTO> templateDashboard = templateManages.stream().filter(item -> "SCREEN".equals(item.getTemplateType())).collect(Collectors.toList());
-        if(countDataV<10){
-            Long addItemCount = 10 -countDataV;
-            Long addIndex = templateDataV.size()<addItemCount? templateDataV.size() :addItemCount;
-            contents.addAll(templateDataV.subList(0,addIndex.intValue()));
+        if (countDataV < 10) {
+            Long addItemCount = 10 - countDataV;
+            Long addIndex = templateDataV.size() < addItemCount ? templateDataV.size() : addItemCount;
+            contents.addAll(templateDataV.subList(0, addIndex.intValue()));
         }
 
-        if(countDashboard<10){
-            Long addItemCount = 10 -countDashboard;
-            Long addIndex = templateDashboard.size()<addItemCount? templateDashboard.size() :addItemCount;
-            contents.addAll(templateDashboard.subList(0,addIndex.intValue()));
+        if (countDashboard < 10) {
+            Long addItemCount = 10 - countDashboard;
+            Long addIndex = templateDashboard.size() < addItemCount ? templateDashboard.size() : addItemCount;
+            contents.addAll(templateDashboard.subList(0, addIndex.intValue()));
         }
 
         return new MarketBaseResponse(url, categoryVO, contents);
@@ -205,7 +242,7 @@ public class TemplateCenterManage {
         List<MarketMetaDataVO> categoryVO = getCategoriesObject().stream().filter(node -> !"全部".equalsIgnoreCase(node.getLabel())).collect(Collectors.toList());
         Map<String, String> categoriesMap = categoryVO.stream()
                 .collect(Collectors.toMap(MarketMetaDataVO::getValue, MarketMetaDataVO::getLabel));
-        List<String> activeCategoriesName = new ArrayList<>(Arrays.asList("最近使用", "推荐"));
+        List<String> activeCategoriesName = new ArrayList<>(Arrays.asList(Translator.get("i18n_template_recent"), Translator.get("i18n_template_recommend")));
         contents.stream().forEach(templateMarketDTO -> {
             Long recentUseTime = useTime.get(templateMarketDTO.getId());
             templateMarketDTO.setRecentUseTime(recentUseTime == null ? 0 : recentUseTime);
@@ -214,7 +251,8 @@ public class TemplateCenterManage {
         if (v2BaseResponse != null) {
             v2BaseResponse.getItems().stream().forEach(marketTemplateV2ItemResult -> {
                 MarketApplicationSpecVO spec = marketTemplateV2ItemResult.getApplication().getSpec();
-                contents.add(new TemplateMarketDTO(spec.getReadmeName(), spec.getDisplayName(), spec.getScreenshots().get(0).getUrl(), spec.getLinks().get(0).getUrl(), categoriesMap.get(spec.getLabel()), spec.getTemplateType(), useTime.get(spec.getReadmeName()), spec.getSuggest()));
+                MarketApplicationMetaDataVO metadata = marketTemplateV2ItemResult.getApplication().getMetadata();
+                contents.add(new TemplateMarketDTO(metadata.getName(), spec.getDisplayName(), spec.getScreenshots().get(0).getUrl(), spec.getLinks().get(0).getUrl(), categoriesMap.get(spec.getLabel()), spec.getTemplateType(), useTime.get(spec.getReadmeName()), spec.getSuggest(), spec.getTemplateClassification()));
                 if (categoriesMap.get(spec.getLabel()) != null) {
                     activeCategoriesName.add(categoriesMap.get(spec.getLabel()));
                 }
@@ -233,7 +271,7 @@ public class TemplateCenterManage {
 
     public List<MarketMetaDataVO> getCategoriesObject() {
         List<MarketMetaDataVO> result = getCategoriesV2();
-        result.add(0, new MarketMetaDataVO("recent", "最近使用", CommonConstants.TEMPLATE_SOURCE.PUBLIC));
+        result.add(0, new MarketMetaDataVO("recent", Translator.get("i18n_template_recent"), CommonConstants.TEMPLATE_SOURCE.PUBLIC));
         return result;
     }
 
@@ -254,7 +292,7 @@ public class TemplateCenterManage {
             String resultStr = marketGet(templateParams.get("template.url") + TEMPLATE_META_DATA_URL, null);
             MarketMetaDataBaseResponse metaData = JsonUtil.parseObject(resultStr, MarketMetaDataBaseResponse.class);
             allCategories.addAll(metaData.getLabels());
-            allCategories.add(0, new MarketMetaDataVO("suggest", "推荐", CommonConstants.TEMPLATE_SOURCE.PUBLIC));
+            allCategories.add(0, new MarketMetaDataVO("suggest", Translator.get("i18n_template_recommend"), CommonConstants.TEMPLATE_SOURCE.PUBLIC));
         } catch (Exception e) {
             LogUtil.error("模板市场分类获取错误", e);
         }
